tests/transpiler/x/swift/slice.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/064/main.swift:2:31: error: consecutive statements on a line must be separated by ';'
1 | // Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:39 GMT+7
2 | print(Array([1, 2, 3][1..<3])))
  |                               `- error: consecutive statements on a line must be separated by ';'
3 | print(Array([1, 2, 3][0..<2])))
4 | print((String(Array("hello")[1..<4]) as! String))

/tmp/TestSwiftTranspiler_VMValid_Golden2036420806/064/main.swift:2:31: error: expected expression
1 | // Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:39 GMT+7
2 | print(Array([1, 2, 3][1..<3])))
  |                               `- error: expected expression
3 | print(Array([1, 2, 3][0..<2])))
4 | print((String(Array("hello")[1..<4]) as! String))
