tests/transpiler/x/swift/slice.swift
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:18:39 GMT+7
print(Array([1, 2, 3][1..<3])))
print(Array([1, 2, 3][0..<2])))
print((String(Array("hello")[1..<4]) as! String))
